# api-rust-old

./: .env  .env.example  .gitignore  .travis.yml  Cargo.toml  README.md  db.sql  docker-compose.yml
examples/: ping.rs
src/: cache.rs  context.rs  db.rs  main.rs  schema.rs  util.rs
src/maps/: map_controller.rs  map_service.rs  mod.rs
src/models/: maps.rs  mod.rs  scores.rs  users.rs
src/scores/: mod.rs  score_controller.rs  score_service.rs
src/users/: mod.rs  user_controller.rs  user_service.rs
