[package]
name = "bbapi"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0.0", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.9.0"
futures = "0.1"
lazy_static = "0.2"
r2d2 = "0.8.3"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
thruster = "0.7"
time = "0.1.38"
tokio = "0.1.3"
tokio-proto = "0.1"
tokio-service = "0.1"
env_logger = { version = "0.3.4", default-features = false }
uuid = { version = "0.6", features = ["serde", "v4"] }

