[package]
name = "bbapi"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.14"
futures = "0.3"
lazy_static = "1"
r2d2 = "0.8"
r2d2_redis = "0.10"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_repr = "0.1"
thruster = "0.7"
time = "0.1"
tokio = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
env_logger = { version = "0.6", default-features = false }
uuid = { version = "0.6", features = ["serde", "v4"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["prepush-hook", "precommit-hook", "run-cargo-check", "run-cargo-fmt"] }